<resources>
    <string name="app_name">Content Provider</string>
    <string name="name">Name:</string>
    <string name="dele">Delete Data</string>
    <string name="updt">Update Data</string>
    <string name="show">Show Data</string>
    <string name="save">Save Data</string>
    <string name="tele">Telephone:</string>
    <string name="action_settings">Settings</string>
    <string name="closeDrawer">Navigation View</string>
    <string name="openDrawer">Navigation View Closed</string>
    <string name="action_money">Insert Bill/Coin</string>
    <string name="action_exit">Exit</string>
    <string name="action_restock">Restock</string>
    <color name="green">#38dc88</color>
</resources>
