<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:background="@drawable/wallpaper"
        >
        <include
            android:id="@+id/toolbar"
            layout="@layout/tool_bar"
            />
        <FrameLayout
            android:id="@+id/frame"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollIndicators="right"
            >
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Content provider"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center_horizontal"
                    android:textSize="30dp" />
                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:id="@+id/imageButton"
                    android:src="@drawable/conpr"
                    android:layout_below="@+id/textView2"
                    android:layout_centerHorizontal="true" />
            </LinearLayout>
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_gravity="center_horizontal"
    android:layout_marginTop="20dp">
    <TextView android:text="@string/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000"/>
    <EditText
        android:layout_width="wrap_content"
        android:id="@+id/name"
        android:layout_marginLeft="15dp"
        android:hint="contact name"
        android:layout_height="wrap_content"
        android:textColor="#000"/>
</LinearLayout>
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_gravity="center_horizontal"
    android:layout_marginTop="30dp">
    <TextView android:text="@string/tele"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000"/>
    <EditText
        android:layout_width="wrap_content"
        android:id="@+id/phone"
        android:layout_marginLeft="15dp"
        android:inputType="phone"
        android:hint="phone number"
        android:layout_height="wrap_content"
        android:textColor="#000"/>
</LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:onClick="onClickSave"
            android:id="@+id/save"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/show"
            android:onClick="onClickShow"
            android:id="@+id/show" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/dele"
            android:onClick="onClickDele"
            android:id="@+id/dele" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/updt"
            android:onClick="onClickUpdt"
            android:id="@+id/updt" />
    </LinearLayout>
    </LinearLayout>

        </FrameLayout>

    </LinearLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/navigation_view"
        android:layout_height="match_parent"
        android:layout_width="wrap_content"
        android:layout_gravity="start"
        app:headerLayout="@layout/header"
        android:background="@drawable/sky"
        app:menu="@menu/drawer"
        />
</android.support.v4.widget.DrawerLayout>